--- a/google home page/index.html
+++ b/google home page/index.html
@@ -41,7 +41,7 @@
     </ul>
     <!-- Middle Section - Search Box -->
     <div class="search-box">
-      <img src="C:\Users\mouad\Desktop\google home page\image\test1.png">
+      <img src="image\test1.png">
       <input type="text" autofocus >
       <div class="search-buttons">
         <button>Recherche Google</button>
