--- a/google home page/index.html
+++ b/google home page/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCT
 <html lang="en">
   <head>
     <!-- Includeing the Favorite Icon -->
@@ -35,8 +35,8 @@
       </li>
       <li>
 
-        <!--PHOTOS CHRIS A REMPLACER-->
-        <!--<img class="profile-img" src="img/chris3.jpg">-->
+        
+      
       </li>
     </ul>
     <!-- Middle Section - Search Box -->
